web/src/main/resources/scss/menu-styles.scss
@use 'colors';
@use 'z-index';
@use 'colorMap' as *;

$shadow-dark: 0px 0px 2px 1px rgba(102, 102, 102, 0.3);
$classicToolbar: 50px;
// Copied from Flutter CupertinoPageTransition
$submenuTimingFunction: cubic-bezier(.35, .91, .33, .97);
$submenuTransitionDuration: 0.25s;
$menuWidth: 320px;

.GeoGebraFrame {

	.floatingMenuView {
		position: absolute;
		top: 0px;
		box-shadow: 0 6px 16px rgba(0,0,0,0.28);
		z-index: z-index.$z-main-menu-floating;
		height: 100%;
		width: $menuWidth;
		background-color: colors.$white;
		transition-property: left;
		overflow: auto;
		overflow-x: hidden;

		&.transitionIn {
			transition-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
			transition-duration: 0.25s;
			left: 0px;
		}
		&.transitionOut {
			transition-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
			transition-duration: 0.2s;
			left: -$menuWidth;
			box-shadow: none;
		}
		.headerCaption {
			font-weight: 500;
			letter-spacing: -0.65px;
		}
	}

	.menuView {
		width: 100%;
		padding: 8px 0px;
		.groupLabel {
			font-size: 75%;
			text-transform: uppercase;
			margin: 8px 16px 8px 16px;
			}
			.menuItemView {
				width: 100%;
				height: 48px;
				line-height: 48px;
				border-radius: 0px 24px 24px 0px;
				white-space: nowrap;
				font-size: 87%;
				&:hover {
					background-color: neutral(200);
				}
				.menuImg {
					vertical-align: bottom;
					display: inline-block;
					width: 24px;
					height: 24px;
					margin: 12px 16px;
					opacity: 0.54;
					padding: 0;
				}
				.html-face {
					display: inline-block;
					font-size: 87%;
					vertical-align: middle;
				}
				&.userMenuItemView {
					.menuImg {
						border-radius: 50%;
						object-fit: cover;
						opacity: 1;
					}
				}
				&.noImage {
					padding-left: 16px;
				}
			}
		.menuItemGroupView {
			width: 100%;
			padding-right: 10px;
			box-sizing: border-box;

		}
		.divider {
			height: 1px;
			margin: 8px 0px 8px 56px;
		}
	}

	.headerDivider {
		border-bottom: solid #E4E4E4 1px;
	}

	.titleHeader {
		> div {
			color: neutral(700);
		}
	}

	.headeredMenuView {
		background-color: white;
		width: 100%;
		height: 100%;

		.versionNumber {
			position: absolute;
			bottom: 0px;
			font-size: 87%;
			margin-bottom: 16px;
			width: 100%;
			text-align: center;
		}
	}

	.mainMenu {
		position: absolute;
		&.transitionIn {
			transition-timing-function: $submenuTimingFunction;
			transition-duration: $submenuTransitionDuration;
			left: 0px;
		}
		&.transitionOut {
		    overflow: hidden;
			transition-timing-function: $submenuTimingFunction;
			transition-duration: $submenuTransitionDuration;
			left: -100px;
		}
	}

	.subMenu {
		position: absolute;
		height: 100%;
		width: 100%;
		z-index: z-index.$z-main-menu-submenu;
		&.transitionIn {
		    overflow: auto;
			transition-timing-function: $submenuTimingFunction;
			transition-duration: $submenuTransitionDuration;
			box-shadow: -2px 0px 20px 0px colors.$black-30;
			left: 0px;
		}
		&.transitionOut {
			transition-timing-function: $submenuTimingFunction;
			transition-duration: $submenuTransitionDuration;
			left: $menuWidth;
		}
	}

	.menuPanelContainer {
		width: 100%;
		height: 100%;
	}

	.menuPanelGlass {
		width: 100%;
		height: 100%;
		overflow: hidden;
		position: absolute;
		top: 0;
	}
}

